--- a/style.css
+++ b/style.css
@@ -563,7 +563,8 @@ canvas {
 }
 
 .chart-modal-body canvas {
-    max-width: 100%;
+    max-width: 80%;
+    max-height: 80%;
     height: auto;
 }
 
@@ -661,8 +662,10 @@ canvas {
     }
     
     #fullScreenPriceChart {
-        max-width: 100%;
-        max-height: 100%;
+        max-width: 80%;
+        max-height: 80%;
+        width: auto;
+        height: auto;
     }
 }
 
@@ -709,8 +712,10 @@ canvas {
     }
     
     #fullScreenPriceChart {
-        max-width: 100%;
-        max-height: 100%;
+        max-width: 80%;
+        max-height: 80%;
+        width: auto;
+        height: auto;
     }
 }
 
